Sun Jun 25 11:22:27 CEST 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/main-window.c:
	* src/fe-gnome/navigation-tree.c:
	* data/xchat-gnome-ui.xml:
	  - Show a different context menu for channels in the navigation tree
	    based on whether or not the channel is joined.  This allows users
	    to re-join a channel with the context menu. (#344980)


Wed Jun 21 16:21:17 MDT 2006  Isak Savo <iso01001@student.mdh.se>

	* plugins/autoaway/autoaway.h:
	* plugins/autoaway/autoaway.c:
	  - Fix a potential crasher in the autoaway plugin. (#342104)

Wed Jun 21 15:29:49 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/userlist-gui.c:
	  - Maybe fix a race condition that could cause a crash if a tooltip
	    tries to pop up after the window is closed. (#343356)

Wed Jun 21 03:50:41 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* plugins/autoaway/xscreensaver.c:
	  - Rename "stdout" to "out" to be less confusing.

Wed Jun 21 02:05:28 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* po/*:
	  - Update translations from the rosetta dapper branch, since that
	    seems to be where everyone is doing stuff.

Tue Jun 20 18:37:48 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/preferences-page-spellcheck.c:
	  - If libenchant is not installed, or there are no dictionaries, show
	    a short message indicating how to get spell-checking working
	    rather than an empty language-selector list. (#345199)

Tue Jun 20 18:16:52 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/preferences-page-spellcheck.c:
	* src/fe-gnome/preferences-page-spellcheck.h:
	* data/preferences-dialog.glade:
	  - Move widget creation for the spell-checking preferences page into
	    the code, in preparation for making the contents of the page
	    dependent on whether or not enchant is installed with any
	    dictionaries.

Tue Jun 20 17:47:04 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/main-window.c: